--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "./src/index.js",
   "scripts": {
-    "dev": "wev",
+    "dev": "webpack-dev-server",
+    "built":"webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
