--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/index.js",
   "scripts": {
     "dev": "webpack-dev-server",
-    "built":"webpack",
+    "built": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,6 +15,7 @@
     "css-loader": "^6.8.1",
     "handlebars": "^4.7.7",
     "handlebars-loader": "^1.7.3",
+    "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.1",
     "mini-css-extract-plugin": "^2.7.6",
     "node-sass": "^9.0.0",
@@ -23,8 +24,5 @@
     "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.0"
-  },
-  "dependencies": {
-    "html-loader": "^4.2.0"
   }
 }
